Added a nice background

--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
 	<link rel="stylesheet" href="./static/css/styles.css">
     <link rel="icon" href="./static/images/favicon.png" type="image/x-icon">
 
-	<body>
-
-	<div class="header">
+<body>
+	<header>
 		<h1>Yas_!_ru's website</h1>
 		<p>
 			My name is yasiru and I like to code as a hobby.
 		</p>
-	</div>
+	</header>
 
-	<nav class="navbar">
+	<nav>
 		<a class="left" href="#about-me">About me</a>
 		<a class="left" href="#skill-set">Skill set</a>
 		<a class="left" href="#projects">Projects</a>
@@ -28,8 +27,7 @@
 		<a class="right" href="#contact-info">Contact</a>
 	</nav>
 
-	<div class="row">
-
+	<row>
 		<div class="leftColumn">
 			<div id="about-me" class="card">
 				<h2>About Me</h2>
@@ -39,13 +37,18 @@
 					<br><br>
 					Got into programming when the pandemic lockdown began in 2020 April, when a dev introduced javascript, who later suggested learning python and javascript.
 					<br><br>
-					Since then I've been coding a lot in both languages. Met <a href="https://github.com/LeoSko" target="_blank">LeoSko</a> who gave me good advice and an opportunity on to my first ever mass scale project. I plan to become a full-stack dev one day.</p>
-			</div>
-			<div id="contact-info" class="card" align="center">
-				<a class="socialIcon" href="mailto:mwmykd@gmail.com"><ion-icon name="mail-outline"></ion-icon></a>
-				<a class="socialIcon" href="discord:https://discord.com/users/837258955415748639"><ion-icon name="logo-discord"></ion-icon></a>
-				<a class="socialIcon" target="_blank" href="https://github.com/ItsYasiru"><ion-icon name="logo-octocat"></ion-icon></ion-icon></a>
-				<a class="socialIcon" target="_blank" href="https://wa.me/qr/6SNFWKYZ4CYFD1"><ion-icon name="logo-whatsapp"></ion-icon></ion-icon></a>
+					Since then I've been coding a lot in both languages.
+					Met <a href="https://github.com/LeoSko" target="_blank">LeoSko</a> who gave me good advice and an opportunity on to my first ever mass scale project.
+					I plan to become a full-stack dev one day.
+				</p>
+
+				<div title="Contact Info" id="contact-info" align="center">
+					<a class="socialIcon" href="mailto:mwmykd@gmail.com"><ion-icon name="mail-outline"></ion-icon></a>
+					<a class="socialIcon" href="discord:https://discord.com/users/837258955415748639"><ion-icon name="logo-discord"></ion-icon></a>
+					<a class="socialIcon" target="_blank" href="https://github.com/ItsYasiru"><ion-icon name="logo-octocat"></ion-icon></ion-icon></a>
+					<a class="socialIcon" target="_blank" href="https://wa.me/qr/6SNFWKYZ4CYFD1"><ion-icon name="logo-whatsapp"></ion-icon></ion-icon></a>
+				</div>
+				</div>
 			</div>
 		</div>
 
@@ -56,7 +59,7 @@
 					<p align="center">
 						These are my skills, what I'm good and bad at. Please note that this is work in progress.
 					</p>
-					<center><img width=100% height=100% alt="Failed to load image!" src="https://github-readme-stats.vercel.app/api/top-langs/?username=ItsYasiru&hide_title=true&border_color=ADADAD"></center>
+					<center><img title="Languages I've worked with ~ Github statistics" width=100% height=100% alt="Failed to load image!" src="https://github-readme-stats.vercel.app/api/top-langs/?username=ItsYasiru&hide_title=true&border_color=ADADAD"></center>
 				</div>
 
 				<table class="rightContainer">
@@ -106,6 +109,7 @@
 						Projects that I contribute to/handle. Looking forward to contribute to Python, JavaScript projects.
 					</p>
 				</div>
+
 				<table class="rightContainer">
 					<tr>
 						<th width="20%">Name</th>
@@ -172,19 +176,18 @@
 					</tr>
 				</table>
 			</div>
-			</div>
 		</div>
-	</div>
+	</row>
 
-	<div class="footer">
+	<footer>
 		<p>
 			This website was built by @Yas_!_ru with HTML, CSS and JavaScript. Hosted on Github pages.
 		</p>
-	</div>
+	</footer>
 
 	<script src="./static/scripts/index.js"></script>
 	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
-	</body>
+</body>
 </html>
