--- a/index.html
+++ b/index.html
@@ -60,46 +60,56 @@
 						These are my skills, what I'm good and bad at. Please note that this is work in progress.
 					</p>
 					<center><img title="Languages I've worked with ~ Github statistics" width=100% height=100% alt="Failed to load image!" src="https://github-readme-stats.vercel.app/api/top-langs/?username=ItsYasiru&hide_title=true&border_color=ADADAD"></center>
+					<br>
+					<div title="Tools & Languages I use" align="center">
+						<ion-icon name="logo-javascript"></ion-icon>
+						<ion-icon name="logo-python"></ion-icon>
+						<ion-icon name="logo-html5"></ion-icon>
+						<ion-icon name="logo-css3"></ion-icon>
+						<img class="icon" width="30px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/visual-studio-code/visual-studio-code.png">
+					</div>
 				</div>
 
-				<table class="rightContainer">
-					<tr>
-						<th width="20%">Language</th>
-						<th width="15%">Level</th>
-						<th width="65%">Extra</th>
-					</tr>
+				<div class="rightContainer">
+					<table>
 						<tr>
-						<td>Python</td>
-						<td>Experienced</td>
-						<td>This is my strongest language now. I have been coding discord bots, several computer applications with python. Good with discord.py, pymongo, PyQt & more.</td>
-					</tr>
-					<tr>
-						<td>Server Management</td>
-						<td>Intermediate</td>
-						<td>Have experience with handling Linux servers, SSH, FTP & Process management.</td>
-					</tr>
-					</tr>
+							<th width="20%">Language</th>
+							<th width="15%">Level</th>
+							<th width="65%">Extra</th>
+						</tr>
+							<tr>
+							<td>Python</td>
+							<td>Experienced</td>
+							<td>This is my strongest language now. I have been coding discord bots, several computer applications with python. Good with discord.py, pymongo, PyQt & more.</td>
+						</tr>
 						<tr>
-						<td>Databases</td>
-						<td>Intermediate</td>
-						<td>So far I've worked with mongo db and PostgreSQL.</td>
-					</tr>
-					<tr>
-						<td>HTML</td>
-						<td>Intermediate</td>
-						<td>Wouldn't exacty call a language but meh.</td>
-					</tr>
-					<tr>
-						<td>CSS</td>
-						<td>Intermediate</td>
-						<td>Learning CSS along with HTML & Javascript.</td>
-					</tr>
-					<tr>
-						<td>Javascript</td>
-						<td>Beginner</td>
-						<td>Just started with basic application of javascript onto websites.</td>
-					</tr>
-				</table>
+							<td>Server Management</td>
+							<td>Intermediate</td>
+							<td>Have experience with handling Linux servers, SSH, FTP & Process management.</td>
+						</tr>
+						</tr>
+							<tr>
+							<td>Databases</td>
+							<td>Intermediate</td>
+							<td>So far I've worked with mongo db and PostgreSQL.</td>
+						</tr>
+						<tr>
+							<td>HTML</td>
+							<td>Intermediate</td>
+							<td>Wouldn't exacty call a language but meh.</td>
+						</tr>
+						<tr>
+							<td>CSS</td>
+							<td>Intermediate</td>
+							<td>Learning CSS along with HTML & Javascript.</td>
+						</tr>
+						<tr>
+							<td>Javascript</td>
+							<td>Beginner</td>
+							<td>Just started with basic application of javascript onto websites.</td>
+						</tr>
+					</table>
+				</div>
 			</div>
 
 			<div id="projects" class="card">
@@ -147,14 +157,11 @@
 				<div class="leftContainer">
 					<h2>Services</h2>
 					<center>
-						<p>Services I can provide you with.</p>
-						<button id="form-button" onclick="openForm()">Let's work together</button>
-						<form id="form">
-							<label>Name</label><input type="text" id="form-name"><br><br>
-							<label>Email</label><input type="email" id="form-email"><br><br>
-							<button onclick="submitForm()">Submit</button>
-							<button href="#services" onclick="closeForm()">Cancel</button>
-						</form>
+						<button>
+							<a target="_blank" href="https://www.fiverr.com/briefs/new?username=yas_i_ru">
+							<svg width="89" height="27" viewBox="0 0 89 27" fill="none" xmlns="http://www.w3.org/2000/svg"><g fill="#404145"><path d="m81.6 13.1h-3.1c-2 0-3.1 1.5-3.1 4.1v9.3h-6v-13.4h-2.5c-2 0-3.1 1.5-3.1 4.1v9.3h-6v-18.4h6v2.8c1-2.2 2.3-2.8 4.3-2.8h7.3v2.8c1-2.2 2.3-2.8 4.3-2.8h2zm-25.2 5.6h-12.4c.3 2.1 1.6 3.2 3.7 3.2 1.6 0 2.7-.7 3.1-1.8l5.3 1.5c-1.3 3.2-4.5 5.1-8.4 5.1-6.5 0-9.5-5.1-9.5-9.5 0-4.3 2.6-9.4 9.1-9.4 6.9 0 9.2 5.2 9.2 9.1 0 .9 0 1.4-.1 1.8zm-5.7-3.5c-.1-1.6-1.3-3-3.3-3-1.9 0-3 .8-3.4 3zm-22.9 11.3h5.2l6.6-18.3h-6l-3.2 10.7-3.2-10.8h-6zm-24.4 0h5.9v-13.4h5.7v13.4h5.9v-18.4h-11.6v-1.1c0-1.2.9-2 2.2-2h3.5v-5h-4.4c-4.3 0-7.2 2.7-7.2 6.6v1.5h-3.4v5h3.4z"></path></g><g fill="#1dbf73"><path d="m85.3 27c2 0 3.7-1.7 3.7-3.7s-1.7-3.7-3.7-3.7-3.7 1.7-3.7 3.7 1.7 3.7 3.7 3.7z"></path></g></svg>
+							</a>
+						</button>
 					</center>
 				</div>
 
