Changed icon styles and stuff

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<div class="leftColumn">
 			<div id="about-me" class="card">
 				<h2>About Me</h2>
-					<center><img width=90% height=90% alt="Failed to load image!" src="./static/images/profile_picture.jpg"></center>
+				<center><img width=90% height=90% alt="Failed to load image!" src="./static/images/profile_picture.jpg"></center>
 				<p>
 					I'm 16 years old studying in high school for 2023 GCE AL's <a href="https://www.trinitycollege.lk" target="_blank">Trinity College Kandy</a> <i>~ Respice Finem</i>.
 					<br><br>
@@ -48,7 +48,6 @@
 					<a class="socialIcon" target="_blank" href="https://github.com/ItsYasiru"><ion-icon name="logo-octocat"></ion-icon></ion-icon></a>
 					<a class="socialIcon" target="_blank" href="https://wa.me/qr/6SNFWKYZ4CYFD1"><ion-icon name="logo-whatsapp"></ion-icon></ion-icon></a>
 				</div>
-				</div>
 			</div>
 		</div>
 
@@ -59,14 +58,14 @@
 					<p align="center">
 						These are my skills, what I'm good and bad at. Please note that this is work in progress.
 					</p>
-					<center><img title="Languages I've worked with ~ Github statistics" width=100% height=100% alt="Failed to load image!" src="https://github-readme-stats.vercel.app/api/top-langs/?username=ItsYasiru&hide_title=true&border_color=ADADAD"></center>
-					<br>
-					<div title="Tools & Languages I use" align="center">
-						<ion-icon name="logo-javascript"></ion-icon>
-						<ion-icon name="logo-python"></ion-icon>
-						<ion-icon name="logo-html5"></ion-icon>
-						<ion-icon name="logo-css3"></ion-icon>
-						<img class="icon" width="30px" src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/visual-studio-code/visual-studio-code.png">
+					<img title="Languages I've worked with ~ Github statistics" width=100% height=100% src="https://github-readme-stats.vercel.app/api/top-langs/?username=ItsYasiru&hide_title=true&border_color=ADADAD&layout=compact">
+					<br><br>
+					<div align="center">
+						<img class="icon" src="./static/icons/visual-studio-code.png">
+						<img class="icon" src="./static/icons/python.png">
+						<img class="icon" src="./static/icons/javascript.png">
+						<img class="icon" src="./static/icons/css.png">
+						<img class="icon" src="./static/icons/html.png">
 					</div>
 				</div>
 
@@ -188,11 +187,10 @@
 
 	<footer>
 		<p>
-			This website was built by @Yas_!_ru with HTML, CSS and JavaScript. Hosted on Github pages.
+			This website was built by @Yas_!_ru with HTML & CSS. Hosted on Github pages.
 		</p>
 	</footer>
 
-	<script src="./static/scripts/index.js"></script>
 	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
