Nothing to mention

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<h2>About Me</h2>
 				<center><img width=90% height=90% alt="Failed to load image!" src="./static/images/profile_picture.jpg"></center>
 				<p>
-					I'm 16 years old studying in high school for 2023 GCE AL's <a href="https://www.trinitycollege.lk" target="_blank">Trinity College Kandy</a> <i>~ Respice Finem</i>.
+					I'm 16 years old studying in high school for 2023 GCE AL's <a href="https://www.trinitycollege.lk" target="_blank">Trinity College Kandy</a> ~ Respice Finem.
 					<br><br>
 					Got into programming when the pandemic lockdown began in 2020 April, when a dev introduced javascript, who later suggested learning python and javascript.
 					<br><br>
@@ -90,7 +90,7 @@
 							<tr>
 							<td>Databases</td>
 							<td>Intermediate</td>
-							<td>So far I've worked with mongo db and PostgreSQL.</td>
+							<td>So far I've worked with Mongo db and PostgreSQL.</td>
 						</tr>
 						<tr>
 							<td>HTML</td>
