--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<a class="left" href="#about-me">About me</a>
 		<a class="left" href="#skill-set">Skill set</a>
 		<a class="left" href="#projects">Projects</a>
-		<a class="left" href="#services">Services</a>
+		<a class="left" href="#fiverr">Fiverr</a>
 
 		<a class="right" href="#contact-info">Contact</a>
 	</nav>
@@ -31,15 +31,15 @@
 		<div class="leftColumn">
 			<div id="about-me" class="card">
 				<h2>About Me</h2>
-				<center><img width=90% height=90% alt="Failed to load image!" src="./static/images/profile_picture.jpg"></center>
+				<center><img width=90% height=90% alt="Failed to load image!" src="./static/images/profile-picture.jpg"></center>
 				<p>
-					I'm 16 years old studying in high school for 2023 GCE AL's <a href="https://www.trinitycollege.lk" target="_blank">Trinity College Kandy</a> ~ Respice Finem.
+					I'm 16 years old studying in high school for 2023 GCE AL's <a title="Respice Finem" href="https://www.trinitycollege.lk" target="_blank">Trinity College Kandy</a>.
 					<br><br>
-					Got into programming when the pandemic lockdown began in 2020 April, when a dev introduced javascript, who later suggested learning python and javascript.
+					I got into programming when the pandemic lockdown began in 2020 April, when a dev introduced javascript, who later suggested learning python and javascript.
 					<br><br>
-					Since then I've been coding a lot in both languages.
-					Met <a href="https://github.com/LeoSko" target="_blank">LeoSko</a> who gave me good advice and an opportunity on to my first ever mass scale project.
-					I plan to become a full-stack dev one day.
+					Since then I've been coding a lot in both languages and many other languages and frameworks. <wbr>I've learned a lot just by self-studying, reading articles, docs, & talking to everyone that I've met.
+					<br><br>
+					Met <a href="https://github.com/LeoSko" target="_blank">LeoSko</a> who gave me good advice and an opportunity on to my first ever mass scale project. My ambition is to become a full-stack dev one day.
 				</p>
 
 				<div title="Contact Info" id="contact-info" class="contactBox" align="center">
@@ -78,8 +78,13 @@
 						</tr>
 							<tr>
 							<td>Python</td>
-							<td>Experienced</td>
+							<td>Expert</td>
 							<td>This is my strongest language now. I have been coding discord bots, several computer applications with python. Good with discord.py, pymongo, PyQt & more.</td>
+						</tr>
+						<tr>
+							<td>HTML & CSS</td>
+							<td>Expert</td>
+							<td>I can build websites that will look good on any device or browser.</td>
 						</tr>
 						<tr>
 							<td>Server Management</td>
@@ -93,19 +98,14 @@
 							<td>So far I've worked with Mongo db and PostgreSQL.</td>
 						</tr>
 						<tr>
-							<td>HTML</td>
-							<td>Intermediate</td>
-							<td>Wouldn't exacty call a language but meh.</td>
-						</tr>
-						<tr>
-							<td>CSS</td>
-							<td>Intermediate</td>
-							<td>Learning CSS along with HTML & Javascript.</td>
-						</tr>
-						<tr>
 							<td>Javascript</td>
+							<td>Intermediate</td>
+							<td>Getting started with Node.js and Angular to build web applications.</td>
+						</tr>
+						<tr>
+							<td>PHP</td>
 							<td>Beginner</td>
-							<td>Just started with basic application of javascript onto websites.</td>
+							<td>Just getting started.</td>
 						</tr>
 					</table>
 				</div>
@@ -121,8 +121,8 @@
 
 				<table class="rightContainer">
 					<tr>
-						<th width="20%">Name</th>
-						<th width="80%">Details</tr>
+						<th width="25%">Name</th>
+						<th width="75%">Details</tr>
 					</tr>
 					<tr>
 						<td>
@@ -130,20 +130,12 @@
 						</td>
 						<td>
 							Built "Ranked Bot" that ran alongside a public mindustry server.
-							The bot that's capable of retrieving aggregated player statistics, match statistics & game replays served by a backend API & more.
+							The bot that's capable of retrieving aggregated player statistics, match statistics & game replays served by a backend API.
 						</td>
 					</tr>
 					<tr>
 						<td>
-							My Website
-						</td>
-						<td>
-							<a target="_blank" href="https://itsyasiru.github.io/ItsYasiru">https://itsyasiru.github.io/ItsYasiru</a>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							Website for Line A
+							Line A Photography
 						</td>
 						<td>
 							<a href="https://line-a-photography.netlify.app" target="_blank">https://line-a-photography.netlify.app</a>
@@ -152,10 +144,13 @@
 				</table>
 			</div>
 
-			<div id="services" class="card">
+			<div id="fiverr" class="card">
 				<div class="leftContainer">
-					<h2>Services</h2>
+					<h2>Fiverr</h2>
 					<center>
+						<p>
+							An online market where I provide a few services as a freelancer.
+						</p>
 						<button title="Check out my Fiverr!">
 							<a target="_blank" href="https://www.fiverr.com/briefs/new?username=yas_i_ru">
 							<svg width="89" height="27" viewBox="0 0 89 27" fill="none" xmlns="http://www.w3.org/2000/svg"><g fill="#404145"><path d="m81.6 13.1h-3.1c-2 0-3.1 1.5-3.1 4.1v9.3h-6v-13.4h-2.5c-2 0-3.1 1.5-3.1 4.1v9.3h-6v-18.4h6v2.8c1-2.2 2.3-2.8 4.3-2.8h7.3v2.8c1-2.2 2.3-2.8 4.3-2.8h2zm-25.2 5.6h-12.4c.3 2.1 1.6 3.2 3.7 3.2 1.6 0 2.7-.7 3.1-1.8l5.3 1.5c-1.3 3.2-4.5 5.1-8.4 5.1-6.5 0-9.5-5.1-9.5-9.5 0-4.3 2.6-9.4 9.1-9.4 6.9 0 9.2 5.2 9.2 9.1 0 .9 0 1.4-.1 1.8zm-5.7-3.5c-.1-1.6-1.3-3-3.3-3-1.9 0-3 .8-3.4 3zm-22.9 11.3h5.2l6.6-18.3h-6l-3.2 10.7-3.2-10.8h-6zm-24.4 0h5.9v-13.4h5.7v13.4h5.9v-18.4h-11.6v-1.1c0-1.2.9-2 2.2-2h3.5v-5h-4.4c-4.3 0-7.2 2.7-7.2 6.6v1.5h-3.4v5h3.4z"></path></g><g fill="#1dbf73"><path d="m85.3 27c2 0 3.7-1.7 3.7-3.7s-1.7-3.7-3.7-3.7-3.7 1.7-3.7 3.7 1.7 3.7 3.7 3.7z"></path></g></svg>
@@ -163,24 +158,35 @@
 						</button>
 					</center>
 				</div>
+				<div class="rightContainer">
+					<table>
+						<tr>
+							<th width="20%">Item</th>
+							<th width="80%">Details</th>
+						</tr>
+						<tr>
+							<td>
+								<a title="Click to open in Fiverr" target="_blank" href="https://www.fiverr.com/share/w239aB">A Discord bot</a>
+							</td>
+							<td>
+								I can develop a discord bot to do anything that can be done on discord with a bot, the way you need it to be done.
+								I can get anything from Giveaways, Moderation, Music, Leveling, Welcome messages, Registration forms, Data queries, Auto roles done for you.
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<a title="Click to open in Fiverr" target="_blank" href="https://www.fiverr.com/share/NEoQvp">A simple Website</a>
+							</td>
+							<td>
+								A beautiful website that will look good on Tablets, Computers & Mobile devices.
+								I will revise and rework it before I deliver the final product so it will look and function just the way you want it to.
+								I also have my own templates, color palettes that look amazing to try out.
+								<br>
 
-				<table class="rightContainer">
-					<tr>
-						<th width="20%">Item</th>
-						<th width="80%">Details</th>
-					</tr>
-					<tr>
-						<td>A Discord bot</td>
-						<td>
-							I can develop a discord bot to do anything that can be done on discord with a bot, the way you need it to be done.
-							I can get anything from Giveaways, Moderation, Music, Leveling, Welcome messages, Registration forms, Data queries, Auto roles done for you.
-						</td>
-					</tr>
-					<tr>
-						<td>A Website</th>
-						<td>A website built according to the way you need it to look and behave.</th>
-					</tr>
-				</table>
+							</th>
+						</tr>
+					</table>
+				</div>
 			</div>
 		</div>
 	</row>
