--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<h2>About Me</h2>
 				<center><img width=90% height=90% alt="Failed to load image!" src="./static/images/profile-picture.jpg"></center>
 				<p>
-					I'm 16 years old studying in high school for 2023 GCE AL's <a title="Respice Finem" href="https://www.trinitycollege.lk" target="_blank">Trinity College Kandy</a>.
+					I'm 16 years old studying in high school for my 2023 GCE AL's at <a title="Respice Finem" href="https://www.trinitycollege.lk" target="_blank">Trinity College Kandy</a>.
 					<br><br>
 					I got into programming when the pandemic lockdown began in 2020 April, when a dev introduced javascript, who later suggested learning python and javascript.
 					<br><br>
