--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<br><br>
 					I got into programming when the pandemic lockdown began in 2020 April, when a dev introduced javascript, who later suggested learning python and javascript.
 					<br><br>
-					Since then I've been coding a lot in both languages and many other languages and frameworks. <wbr>I've learned a lot just by self-studying, reading articles, docs, & talking to everyone that I've met.
+					Since then I've been coding a lot in both languages and many other languages, frameworks. <wbr>I've learned a lot just by self-studying, reading articles, docs, & talking to everyone that I've met.
 					<br><br>
 					Met <a href="https://github.com/LeoSko" target="_blank">LeoSko</a> who gave me good advice and an opportunity on to my first ever mass scale project. My ambition is to become a full-stack dev one day.
 				</p>
@@ -169,7 +169,7 @@
 								<a title="Click to open in Fiverr" target="_blank" href="https://www.fiverr.com/share/w239aB">A Discord bot</a>
 							</td>
 							<td>
-								I can develop a discord bot to do anything that can be done on discord with a bot, the way you need it to be done.
+								I will develop a discord bot to do anything that can be done on discord with a bot, the way you need it to be done.
 								I can get anything from Giveaways, Moderation, Music, Leveling, Welcome messages, Registration forms, Data queries, Auto roles done for you.
 							</td>
 						</tr>
@@ -178,11 +178,9 @@
 								<a title="Click to open in Fiverr" target="_blank" href="https://www.fiverr.com/share/NEoQvp">A simple Website</a>
 							</td>
 							<td>
-								A beautiful website that will look good on Tablets, Computers & Mobile devices.
-								I will revise and rework it before I deliver the final product so it will look and function just the way you want it to.
-								I also have my own templates, color palettes that look amazing to try out.
-								<br>
-
+								I will build a website that will look good on Tablets, Computers & Mobile devices.
+								I will revise & rework it before I deliver the final product so that it will look & function just the way you want it to.
+								I also have my own templates & color palettes that have their own unique feel.
 							</th>
 						</tr>
 					</table>
