--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, height=device-height">
 
-    <meta property="og:title" content="Yas_!_ru's Website">
+	<meta name="theme-color" content="#00FFFF">
+	<meta property="og:title" content="Yas_!_ru's Website">
+	<meta property="og:image" content="./static/images/favicon.png">
 
 	<title>Yas_!_ru's website</title>
 
