--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 						</tr>
 						<tr>
 							<td>
-								<a title="Click to open in Fiverr" target="_blank" href="https://www.fiverr.com/share/NEoQvp">A simple Website</a>
+								<a title="Click to open in Fiverr" target="_blank" href="https://www.fiverr.com/share/NEoQvp">A stunning Website</a>
 							</td>
 							<td>
 								I will build a website that will look good on Tablets, Computers & Mobile devices.
