Added a back to top button

--- a/index.html
+++ b/index.html
@@ -192,17 +192,15 @@
 		</div>
 	</row>
 
+	<button onclick="topFunction()" id="toTopButton" title="Go to top"><ion-icon name="chevron-up-outline"></ion-icon></button>
+
 	<footer>
 		<p>
 			This website was built by @Yas_!_ru with HTML & CSS. Hosted on Github pages.
 		</p>
 	</footer>
 
-
-	<script>
-		fetch("https://hit.yhype.me/github/profile?user_id=50617221");
-	</script>
-
+	<script src="./static/scripts/index.js"></script>
 	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
