--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 <body>
 	<header>
 		<h1>Yas_!_ru's website</h1>
-		<p>
-			My name is yasiru and I like to code as a hobby.
-		</p>
+		<p id="lable">My name is Yasiru and I like to code as a hobby.</p>
 	</header>
 
 	<nav>
