--- a/index.html
+++ b/index.html
@@ -127,11 +127,12 @@
 					</tr>
 					<tr>
 						<td>
-							<a href="https://discord.com/invite/Hjr92J7">Mindustry Ranked</a>
+							<a href="https://discord.com/invite/Hjr92J7" target="_blank">Mindustry Ranked</a>
 						</td>
 						<td>
-							Built "Ranked Bot" that ran alongside a public mindustry server.
-							The bot that's capable of retrieving aggregated player statistics, match statistics & game replays served by a backend API.
+							Developer of "Ranked Bot".
+							The bot is capable of retrieving aggregated player statistics, match statistics & game replays served by a backend API.
+							More info <a href="https://ranked.ddns.net" target="_blank">https://ranked.ddns.net</a>
 						</td>
 					</tr>
 					<tr>
