--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
 	<link rel="stylesheet" href="./static/css/styles.css">
     <link rel="icon" href="./static/images/favicon.png" type="image/x-icon">
 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-YDCFQGQZB8"></script>
+	<script>
+	    window.dataLayer = window.dataLayer || [];
+	    function gtag(){dataLayer.push(arguments);}
+	    gtag('js', new Date());
+
+	    gtag('config', 'G-YDCFQGQZB8');
+    </script>
+
 <body>
 	<header>
 		<h1>Yas_!_ru's website</h1>
