Fixed some html tags

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-    <meta charset="UTF-8">
+<head>
+	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, height=device-height">
+	<meta name="viewport" content="width=device-width, initial-scale=1, height=device-height">
 
 	<meta name="theme-color" content="#00FFFF">
 	<meta property="og:title" content="Yas_!_ru's Website">
@@ -11,8 +12,8 @@
 	<title>Yas_!_ru's website</title>
 
 	<link rel="stylesheet" href="./static/css/styles.css">
-    <link rel="icon" href="./static/images/favicon.png" type="image/x-icon">
-
+	<link rel="icon" href="./static/images/favicon.png" type="image/x-icon">
+</head>
 <body>
 	<header>
 		<h1>Yas_!_ru's website</h1>
@@ -77,7 +78,7 @@
 							<th width="15%">Level</th>
 							<th width="65%">Extra</th>
 						</tr>
-							<tr>
+						<tr>
 							<td>Python</td>
 							<td>Expert</td>
 							<td>This is my strongest language now. I have been coding discord bots, several computer applications with python. Good with discord.py, pymongo, PyQt & more.</td>
@@ -92,8 +93,7 @@
 							<td>Intermediate</td>
 							<td>Have experience with handling Linux servers, SSH, FTP & Process management.</td>
 						</tr>
-						</tr>
-							<tr>
+						<tr>
 							<td>Databases</td>
 							<td>Intermediate</td>
 							<td>So far I've worked with Mongo db and PostgreSQL.</td>
@@ -120,72 +120,75 @@
 					</p>
 				</div>
 
-				<table class="rightContainer">
-					<tr>
-						<th width="25%">Name</th>
-						<th width="75%">Details</tr>
-					</tr>
-					<tr>
-						<td>
-							<a href="https://discord.com/invite/Hjr92J7" target="_blank">Mindustry Ranked</a>
-						</td>
-						<td>
-							Developer of "Ranked Bot".
-							The bot is capable of retrieving aggregated player statistics, match statistics & game replays served by a backend API.
-							More info <a href="https://ranked.ddns.net" target="_blank">https://ranked.ddns.net</a>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							Line A Photography
-						</td>
-						<td>
-							<a href="https://line-a-photography.netlify.app" target="_blank">https://line-a-photography.netlify.app</a>
-						</td>
-					</tr>
-				</table>
-			</div>
-
-			<div id="fiverr" class="card">
-				<div class="leftContainer">
-					<h2>Fiverr</h2>
-					<center>
-						<p>
-							An online market where I provide a few services as a freelancer.
-						</p>
-						<button title="Check out my Fiverr!">
-							<a target="_blank" href="https://www.fiverr.com/briefs/new?username=yas_i_ru">
-							<svg  title="Check out my Fiverr!" width="89" height="27" viewBox="0 0 89 27" fill="none" xmlns="http://www.w3.org/2000/svg"><g fill="#404145"><path d="m81.6 13.1h-3.1c-2 0-3.1 1.5-3.1 4.1v9.3h-6v-13.4h-2.5c-2 0-3.1 1.5-3.1 4.1v9.3h-6v-18.4h6v2.8c1-2.2 2.3-2.8 4.3-2.8h7.3v2.8c1-2.2 2.3-2.8 4.3-2.8h2zm-25.2 5.6h-12.4c.3 2.1 1.6 3.2 3.7 3.2 1.6 0 2.7-.7 3.1-1.8l5.3 1.5c-1.3 3.2-4.5 5.1-8.4 5.1-6.5 0-9.5-5.1-9.5-9.5 0-4.3 2.6-9.4 9.1-9.4 6.9 0 9.2 5.2 9.2 9.1 0 .9 0 1.4-.1 1.8zm-5.7-3.5c-.1-1.6-1.3-3-3.3-3-1.9 0-3 .8-3.4 3zm-22.9 11.3h5.2l6.6-18.3h-6l-3.2 10.7-3.2-10.8h-6zm-24.4 0h5.9v-13.4h5.7v13.4h5.9v-18.4h-11.6v-1.1c0-1.2.9-2 2.2-2h3.5v-5h-4.4c-4.3 0-7.2 2.7-7.2 6.6v1.5h-3.4v5h3.4z"></path></g><g fill="#1dbf73"><path d="m85.3 27c2 0 3.7-1.7 3.7-3.7s-1.7-3.7-3.7-3.7-3.7 1.7-3.7 3.7 1.7 3.7 3.7 3.7z"></path></g></svg>
-							</a>
-						</button>
-					</center>
-				</div>
 				<div class="rightContainer">
 					<table>
 						<tr>
-							<th width="20%">Item</th>
-							<th width="80%">Details</th>
+							<th width="25%">Name</th>
+							<th width="75%">Details</tr>
 						</tr>
 						<tr>
 							<td>
-								<a title="Click to open in Fiverr" target="_blank" href="https://www.fiverr.com/share/w239aB">A Discord bot</a>
+								<a href="https://discord.com/invite/Hjr92J7" target="_blank">Mindustry Ranked</a>
 							</td>
 							<td>
-								I will develop a discord bot to do anything that can be done on discord with a bot, the way you need it to be done.
-								I can get anything from Giveaways, Moderation, Music, Leveling, Welcome messages, Registration forms, Data queries, Auto roles done for you.
+								Developer of "Ranked Bot".
+								The bot is capable of retrieving aggregated player statistics, match statistics & game replays served by a backend API.
+								More info <a href="https://ranked.ddns.net" target="_blank">https://ranked.ddns.net</a>
 							</td>
 						</tr>
 						<tr>
 							<td>
-								<a title="Click to open in Fiverr" target="_blank" href="https://www.fiverr.com/share/NEoQvp">A stunning Website</a>
+								Line A Photography
 							</td>
 							<td>
-								I will build a website that will look good on Tablets, Computers & Mobile devices.
-								I will revise & rework it before I deliver the final product so that it will look & function just the way you want it to.
-								I also have my own templates & color palettes that have their own unique feel.
-							</th>
+								<a href="https://line-a-photography.netlify.app" target="_blank">https://line-a-photography.netlify.app</a>
+							</td>
 						</tr>
 					</table>
+				</div>
+
+				<div id="fiverr" class="card">
+					<div class="leftContainer">
+						<h2>Fiverr</h2>
+						<center>
+							<p>
+								An online market where I provide a few services as a freelancer.
+							</p>
+							<button title="Check out my Fiverr!">
+							<a target="_blank" href="https://www.fiverr.com/briefs/new?username=yas_i_ru">
+							<svg  title="Check out my Fiverr!" width="89" height="27" viewBox="0 0 89 27" fill="none" xmlns="http://www.w3.org/2000/svg"><g fill="#404145"><path d="m81.6 13.1h-3.1c-2 0-3.1 1.5-3.1 4.1v9.3h-6v-13.4h-2.5c-2 0-3.1 1.5-3.1 4.1v9.3h-6v-18.4h6v2.8c1-2.2 2.3-2.8 4.3-2.8h7.3v2.8c1-2.2 2.3-2.8 4.3-2.8h2zm-25.2 5.6h-12.4c.3 2.1 1.6 3.2 3.7 3.2 1.6 0 2.7-.7 3.1-1.8l5.3 1.5c-1.3 3.2-4.5 5.1-8.4 5.1-6.5 0-9.5-5.1-9.5-9.5 0-4.3 2.6-9.4 9.1-9.4 6.9 0 9.2 5.2 9.2 9.1 0 .9 0 1.4-.1 1.8zm-5.7-3.5c-.1-1.6-1.3-3-3.3-3-1.9 0-3 .8-3.4 3zm-22.9 11.3h5.2l6.6-18.3h-6l-3.2 10.7-3.2-10.8h-6zm-24.4 0h5.9v-13.4h5.7v13.4h5.9v-18.4h-11.6v-1.1c0-1.2.9-2 2.2-2h3.5v-5h-4.4c-4.3 0-7.2 2.7-7.2 6.6v1.5h-3.4v5h3.4z"></path></g><g fill="#1dbf73"><path d="m85.3 27c2 0 3.7-1.7 3.7-3.7s-1.7-3.7-3.7-3.7-3.7 1.7-3.7 3.7 1.7 3.7 3.7 3.7z"></path></g></svg>
+							</a>
+							</button>
+						</center>
+					</div>
+
+					<div class="rightContainer">
+						<table>
+							<tr>
+								<th width="20%">Item</th>
+								<th width="80%">Details</th>
+							</tr>
+							<tr>
+								<td>
+									<a title="Click to open in Fiverr" target="_blank" href="https://www.fiverr.com/share/w239aB">A Discord bot</a>
+								</td>
+								<td>
+									I will develop a discord bot to do anything that can be done on discord with a bot, the way you need it to be done.
+									I can get anything from Giveaways, Moderation, Music, Leveling, Welcome messages, Registration forms, Data queries, Auto roles done for you.
+								</td>
+							</tr>
+							<tr>
+								<td>
+									<a title="Click to open in Fiverr" target="_blank" href="https://www.fiverr.com/share/NEoQvp">A stunning Website</a>
+								</td>
+								<td>
+									I will design and build you a beautiful website that will look good on Tablets, Computers & Mobile devices.
+									I will revise and rework it till you are 100% satisfied.
+									I ensure you that the final product will look and function just the way you want it to.
+								</th>
+							</tr>
+						</table>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -194,14 +197,11 @@
 	<button onclick="topFunction()" id="toTopButton" title="Go to top"><ion-icon name="chevron-up-outline"></ion-icon></button>
 
 	<footer>
-		<p>
-			This website was built by @Yas_!_ru with HTML & CSS. Hosted on Github pages.
-		</p>
+		<p>This website was built by @Yas_!_ru with HTML & CSS. Hosted on Github pages.</p>
 	</footer>
 
 	<script src="./static/scripts/index.js"></script>
 	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 	<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-
 </body>
 </html>
