--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1, height=device-height">
+	<meta name="viewport" content="initial-scale=1, width=device-width, height=device-height">
 
 	<meta name="theme-color" content="#00FFFF">
 	<meta property="og:title" content="Yas_!_ru's Website">
 	<meta property="og:image" content="./static/images/favicon.png">
 
-	<title>Yas_!_ru's website</title>
+	<title>Yas_!_ru's Website</title>
 
-	<link rel="stylesheet" href="./static/css/styles.css">
+	<link rel="stylesheet" href="./static/css/index.css">
     <link rel="icon" href="./static/images/favicon.png" type="image/x-icon">
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -23,6 +23,7 @@
 
 	    gtag('config', 'G-YDCFQGQZB8');
     </script>
+</head>
 
 <body>
 	<header>
@@ -35,6 +36,7 @@
 		<a class="left" href="#skill-set">Skill set</a>
 		<a class="left" href="#projects">Projects</a>
 		<a class="left" href="#fiverr">Fiverr</a>
+		<a class="left" href="./blog.html">Blog</a>
 
 		<a class="right" href="#contact-info">Contact</a>
 	</nav>
@@ -156,6 +158,7 @@
 						</tr>
 					</table>
 				</div>
+			</div>
 
 				<div id="fiverr" class="card">
 					<div class="leftContainer">
