--- a/blog.html
+++ b/blog.html
@@ -13,6 +13,16 @@
 
     <link rel="stylesheet" href="./static/css/blog.css">
     <link rel="icon" href="./static/images/favicon.png" type="image/x-icon">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-N65RBTNE5Z"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-N65RBTNE5Z');
+    </script>
 </head>
 
 <body>
