Mobile responsive changes

--- a/blog.html
+++ b/blog.html
@@ -7,12 +7,12 @@
 
     <meta name="theme-color" content="#00FFFF">
     <meta property="og:title" content="Yas_!_ru's Blog">
-    <meta property="og:image" content="./static/images/favicon.png">
+    <meta property="og:image" content="/images/favicon.png">
 
     <title>Yas_!_ru's Blog</title>
 
-    <link rel="stylesheet" href="./static/css/blog.css">
-    <link rel="icon" href="./static/images/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="/css/blog.css">
+    <link rel="icon" href="/images/favicon.png" type="image/x-icon">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-N65RBTNE5Z"></script>
@@ -46,6 +46,6 @@
 		<p>This website was built by @Yas_!_ru with HTML & CSS. Hosted on Github pages.</p>
 	</footer>
 
-    <script type="text/javascript" src="./static/scripts/blog.js"></script>
+    <script type="text/javascript" src="/scripts/blog.js"></script>
 </body>
 </html>
